2000-11-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkdefs: Read and print one line at a time, so we can force
	patterns to match only at the beginning of a line.

	* defun-int.h (UNDERSCORIFY): Omit `##' in macro definition since
	they are not needed to paste strings together and picky compilers
	choke on them.

2000-11-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (save_ascii_data_for_plotting): New function.
	* pt-plot.cc (save_in_tmp_file): Use it instead of save_ascii_data.

	* load-save.cc (save_ascii_data): Warn if saving Inf or NaN values.
	New arg, infnan_warned.  Use it to warn just once per set.
	Now static.
	(do_save): New arg, infnan_warned.  Pass to save_ascii_data.
	(save_vars): Initialize infnan_warned here, pass to do_save.

2000-11-16  Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* file-io.cc (Ffprintf): If no file id parameter, don't return
	count of characters if nargout is 0 (for compatibility with
	Matlab).

2000-11-16  Ben Sapp  <bsapp@lanl.gov>

	* DLD-FUNCTIONS/rand.cc (do_rand): Declare loop counter as
	volatile int, not just volatile.

2000-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (skip_comments): Allow % as comment character too.
	(extract_keyword): Likewise.

	* Makefile.in (oct-gperf.h): Remove -a, -g, and -p flags for gperf.

2000-10-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (do_load): Allow result to be returned instead of
	inserting variables in the symbol table.  Change patterned after
	patch by Kian Ming Adam Chai <caijianming@yahoo.co.uk>.

2000-10-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (ops.cc): Don't substitute BLAS_LIBS and LIBS here.

	* oct-conf.h.in (OCTAVE_CONF_SPECIAL_MATH_LIB): Delete.
	(OCTAVE_CONF_BLAS_LIBS): Add.
	* toplev.cc (octave_config_info): Likewise, add BLAS_LIBS and
	remove SPECIAL_MATH_LIB from the struct.

	* parse.y (feval (const octave_value_list&, int)): Don't panic